fix(VideoPlayerModal): change background color to black for improved contrast

--- a/app/assets/styles/_variables.scss
+++ b/app/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 // Main color variables
+$color-black: #000000;
 $color-background: #101012;
 $color-foreground: #ffffff;
 $color-grey: #cfcfd0;
